<resources>
    <string name="mine_app_name">我的模块</string>
    <string name="mine_module_page">mine</string>

    <string name="mine_behavior_my_fab_scale">com.linwei.cams.module.mine.weight.behavior.ScaleDownShowBehavior</string>
    <string name="mine_integral">我的积分</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_my_share">我的分享</string>
    <string name="mine_share_article">分享文章</string>
    <string name="mine_open_source_project">开源项目</string>
    <string name="mine_about_author">关于作者</string>
    <string name="mine_desc">请他吃份早餐吧~</string>
    <string name="mine_set">设置</string>
    <string name="mine_language_set">语言设置</string>
    <string name="mine_clear_cache">清除缓存</string>
    <string name="mine_current_version">当前版本</string>
    <string name="mine_copyright_notice">版权声明</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_scoreboard">积分排行榜</string>
    <string name="mine_unlogin">未登录</string>
    <string name="mine_current_score">当前积分</string>
    <string name="mine_save_success">保存成功</string>
    <string name="mine_integral_record">积分记录</string>
    <string name="mine_tip">提示</string>
    <string name="mine_version_tip">当前已是最新版本</string>
    <string name="mine_sure_logout">确定退出登录吗？</string>
    <string name="mine_clear_memory">确定清除缓存？</string>
    <string name="mine_desc_tip">本App中所有的Api均由WanAndroid官网提供，可作为学习参考，禁止作为商业用途!</string>
    <string name="mine_sure">确定</string>
    <string name="mine_cancel">取消</string>
    <string name="mine_delete">删除</string>
    <string name="mine_simplified_chinese">简体中文</string>
    <string name="mine_english">英文</string>

    <string name="mine_introduction">简介：一个热爱Coding，在程序猿这条路越走越远，发现已经深陷大前端中。Android、Flutter、小程序、Vue、JavaScript、SpringBoot、SpringCloud</string>
    <string name="mine_public">公众号：技术工匠(WeiShaiDev)</string>
    <string name="mine_email">邮箱：linwei9605@gmail.com</string>
    <string name="mine_juejin">掘金：https://juejin.cn/user/3280598430651399</string>
    <string name="mine_github">Github：https://github.com/WeiShuaiDev</string>

    <string name="mine_official_website">官方网站</string>
    <string name="mine_website_content">网站内容</string>
    <string name="mine_project_repository">项目仓库</string>

    <string name="mine_input_title">请输入标题</string>
    <string name="mine_input_link">请输入链接地址</string>
    <string name="mine_share">分享</string>
</resources>