<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchAndMatch"
    android:background="@color/colorGlobalBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/stateBarView"
        layout="@layout/include_status_white" />

    <include
        android:id="@+id/topRootLayout"
        layout="@layout/include_top_view_white" />

    <ImageView
        style="@style/WrapAndWrap"
        android:layout_marginTop="@dimen/dp_50"
        android:src="@mipmap/mine_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/mineVersionView"
        style="@style/WrapAndWrap.SecondaryTextColor.TvSize14"
        android:layout_marginTop="@dimen/dp_10"
        tools:text="v1.0" />

    <LinearLayout
        style="@style/MatchAndWrap"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@color/colorGlobalWhite"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mineOfficialWebsiteLayout"
            style="@style/MatchAndWrap"
            android:background="@drawable/ripple_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dp_15">

            <TextView
                style="@style/MatchAndWrap.PrimaryTextColor.TvSize15"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/mine_official_website" />

            <ImageView
                style="@style/WrapAndWrap"
                android:src="@mipmap/mine_ic_mine_into"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mineWebsiteContentLayout"
            style="@style/MatchAndWrap"
            android:background="@drawable/ripple_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dp_15">

            <TextView
                style="@style/MatchAndWrap.PrimaryTextColor.TvSize15"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/mine_website_content" />

            <ImageView
                style="@style/WrapAndWrap"
                android:src="@mipmap/mine_ic_mine_into"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mineProjectRepositoryLayout"
            style="@style/MatchAndWrap"
            android:background="@drawable/ripple_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dp_15">

            <TextView
                style="@style/MatchAndWrap.PrimaryTextColor.TvSize15"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/mine_project_repository" />

            <ImageView
                style="@style/WrapAndWrap"
                android:src="@mipmap/mine_ic_mine_into"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
